--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Quienes Somos</a>
+                            <a class="nav-link" href="#nosotros">Quienes Somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Destacado</a>
+                            <a class="nav-link" href="#destacado">Destacado</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contacto</a>
@@ -67,7 +67,7 @@
             </div>
         </section>
 
-        <section id="Nosotros">
+        <section id="nosotros">
             <div class="container">
                 <div class="row">
                     <div class="title-section text-center px-1 ">
@@ -108,9 +108,44 @@
         <section id="destacado">
             <div class="container">
                 <div class="row">
-                    <div class="col">
+                    <div class="title-section text-center px-1 ">
+                        <h4>Destacados</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col"><!-- tarjeta -->
                         <div class="card" style="width: 18rem;">
                             <img src="assets/img/card1.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col"><!-- tarjeta -->
+                        <div class="card" style="width: 18rem;">
+                            <img src="assets/img/card2.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col"><!-- tarjeta -->
+                        <div class="card" style="width: 18rem;">
+                            <img src="assets/img/card3.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col"><!-- tarjeta -->
+                        <div class="card" style="width: 18rem;">
+                            <img src="assets/img/card4.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
