estilos seccion 'quienes somos'

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </header>
     
     <main><!-- Cuerpo de la pagina -->
-        <section id="carrusel" class="container-fluid h-100 mx-0 px-0">
+        <section id="carrusel" class="container-fluid">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -70,23 +70,25 @@
         <section id="nosotros">
             <div class="container">
                 <div class="row">
-                    <div class="title-section text-center px-1 ">
+                    <div class="title-section text-center my-5 ">
                         <h4>¿Quiénes somos?</h4>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row gx-4">
                     <div class="col">
-                        <div class="head-nosotros text-center">
+                        <div class="head-nosotros align-middle text-center">
                             <i class="fas fa-plane"></i>
                         </div>
                         <div class="body-nosotros">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt, beatae? Odit esse modi voluptatum vero repellat vel. Sequi deleniti sint reiciendis, blanditiis natus praesentium rerum voluptatum cupiditate obcaecati amet impedit!</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempore animi officia! Voluptatem est animi dolor unde soluta ad maiores quo, quia, vero facere cum nostrum magnam accusamus nesciunt ea.
+                            Itaque accusamus deserunt fugiat nulla eius. Corrupti, error? Corrupti adipisci explicabo reprehenderit aliquid magni, minima nulla ipsam sequi numquam exercitationem ea expedita illo veritatis velit molestiae error sit distinctio quas!</p>
                         </div>
                     </div>
 
                     <div class="col">
                         <div class="body-nosotros">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt, beatae? Odit esse modi voluptatum vero repellat vel. Sequi deleniti sint reiciendis, blanditiis natus praesentium rerum voluptatum cupiditate obcaecati amet impedit!</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempore animi officia! Voluptatem est animi dolor unde soluta ad maiores quo, quia, vero facere cum nostrum magnam accusamus nesciunt ea.
+                            Itaque accusamus deserunt fugiat nulla eius. Corrupti, error? Corrupti adipisci explicabo reprehenderit aliquid magni, minima nulla ipsam sequi numquam exercitationem ea expedita illo veritatis velit molestiae error sit distinctio quas!</p>
                         </div>
                         <div class="head-nosotros text-center">
                             <i class="fas fa-mountain"></i>
@@ -98,7 +100,8 @@
                             <i class="fas fa-route"></i>
                         </div>
                         <div class="body-nosotros">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt, beatae? Odit esse modi voluptatum vero repellat vel. Sequi deleniti sint reiciendis, blanditiis natus praesentium rerum voluptatum cupiditate obcaecati amet impedit!</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempore animi officia! Voluptatem est animi dolor unde soluta ad maiores quo, quia, vero facere cum nostrum magnam accusamus nesciunt ea.
+                            Itaque accusamus deserunt fugiat nulla eius. Corrupti, error? Corrupti adipisci explicabo reprehenderit aliquid magni, minima nulla ipsam sequi numquam exercitationem ea expedita illo veritatis velit molestiae error sit distinctio quas!</p>
                         </div>
                     </div>
                 </div>
