responsive nosotros_section 'media querys'

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </header>
     
     <main><!-- Cuerpo de la pagina -->
-        <section id="carrusel" class="container-fluid">
+        <section id="carrusel" class="container-fluid px-0">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="row gx-4">
-                    <div class="col">
+                    <div class="col-lg-4">
                         <div class="head-nosotros align-middle text-center">
                             <i class="fas fa-plane"></i>
                         </div>
@@ -85,7 +85,7 @@
                         </div>
                     </div>
 
-                    <div class="col">
+                    <div class="col-lg-4">
                         <div class="body-nosotros">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempore animi officia! Voluptatem est animi dolor unde soluta ad maiores quo, quia, vero facere cum nostrum magnam accusamus nesciunt ea.
                             Itaque accusamus deserunt fugiat nulla eius. Corrupti, error? Corrupti adipisci explicabo reprehenderit aliquid magni, minima nulla ipsam sequi numquam exercitationem ea expedita illo veritatis velit molestiae error sit distinctio quas!</p>
@@ -95,7 +95,7 @@
                         </div>
                     </div>
 
-                    <div class="col">
+                    <div class="col-lg-4">
                         <div class="head-nosotros text-center">
                             <i class="fas fa-route"></i>
                         </div>
@@ -111,12 +111,12 @@
         <section id="destacado">
             <div class="container">
                 <div class="row">
-                    <div class="title-section text-center px-1 ">
+                    <div class="title-section text-center my-5 ">
                         <h4>Destacados</h4>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3"><!-- tarjeta -->
+                    <div class="col-lg-4"><!-- tarjeta -->
                         <div class="card">
                             <img src="assets/img/card1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -126,7 +126,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3"><!-- tarjeta -->
+                    <div class="col-lg-4"><!-- tarjeta -->
                         <div class="card">
                             <img src="assets/img/card2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -136,7 +136,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3"><!-- tarjeta -->
+                    <div class="col-lg-4"><!-- tarjeta -->
                         <div class="card">
                             <img src="assets/img/card3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -146,7 +146,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3"><!-- tarjeta -->
+                    <div class="col-lg-4"><!-- tarjeta -->
                         <div class="card">
                             <img src="assets/img/card4.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
