--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header><!-- navbar y marca -->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <nav id="navbarra" class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid px-5">
                 <a class="navbar-brand" href="#"><img src="assets/img/viajes.svg" alt="viajes-logo" width="30" height="24">Viajes Chile</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,7 @@
                             <a class="nav-link" href="#destacado">Destacado</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="#contacto">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -159,7 +159,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="contacto">
             <div class="container">
                 <div class="row">
                     <!-- aca va insertado el typeform -->
