--- a/index.html
+++ b/index.html
@@ -115,43 +115,43 @@
                         <h4>Destacados</h4>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4"><!-- tarjeta -->
+                <div class="row gy-5">
+                    <div class="col-sm-12 col-md-6 col-lg-3"><!-- tarjeta -->
                         <div class="card">
-                            <img src="assets/img/card1.jpg" class="card-img-top" alt="...">
+                            <img src="assets/img/card1.jpg" class="card-img-top img-fluid" alt="viajes1">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <h5 class="card-title">Valle Hermoso. Perfecto spanoramas para salir de la rutina</h5>
+                                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quasi minima pariatur, optio eveniet, reprehenderit facere doloribus earum nesciunt veniam, pp>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-lg-4"><!-- tarjeta -->
+                    <div class="col-sm-12 col-md-6 col-lg-3"><!-- tarjeta -->
                         <div class="card">
-                            <img src="assets/img/card2.jpg" class="card-img-top" alt="...">
+                            <img src="assets/img/card2.jpg" class="card-img-top img-fluid" alt="viajes2">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <h5 class="card-title">Paisaje Magico. Perfectos panoramas para salir de la rutina</h5>
+                                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quasi minima pariatur, optio eveniet, reprehenderit facere doloribus earum nesciunt veniam.</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-lg-4"><!-- tarjeta -->
+                    <div class="col-sm-12 col-md-6 col-lg-3"><!-- tarjeta -->
                         <div class="card">
-                            <img src="assets/img/card3.jpg" class="card-img-top" alt="...">
+                            <img src="assets/img/card3.jpg" class="card-img-top img-fluid" alt="viajes3">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <h5 class="card-title">Salar en el norte. Perfescto panoramas para salir de la rutina</h5>
+                                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quasi minima pariatur, optio eveniet, reprehenderit facere doloribus earum nesciunt veniam.</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-lg-4"><!-- tarjeta -->
+                    <div class="col-sm-12 col-md-6 col-lg-3"><!-- tarjeta -->
                         <div class="card">
-                            <img src="assets/img/card4.jpg" class="card-img-top" alt="...">
+                            <img src="assets/img/card4.jpg" class="card-img-top img-fluid" alt="viajes4">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <h5 class="card-title">Selva tropical. Perfectos panoramas para salir de la rutina</h5>
+                                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quasi minima pariatur, optio eveniet, reprehenderit facere doloribus earum nesciunt veniam.</p>
                             </div>
                         </div>
                     </div>
@@ -162,7 +162,12 @@
         <section id="contacto">
             <div class="container">
                 <div class="row">
-                    <!-- aca va insertado el typeform -->
+                    <div class="title-section text-center my-5 ">
+                        <h4>Contacto</h4>
+                    </div>
+                    <!-- Typeform -->
+                    <div class="typeform-widget" data-url="https://form.typeform.com/to/N4m0Gx26?typeform-medium=embed-snippet" style="width: 100%; height: 500px;">
+                    </div>
                 </div>
             </div>
         </section>
@@ -170,27 +175,40 @@
 
     <footer><!-- copyrigth y firma -->
         <div class="container">
-            <div class="row">
-                <div class="col">Viajes chile</div>
-                <div class="col">
+            <div class="row gx-1">
+                <div id="hide-sm" class="footer-brand col-lg-4" >Viajes chile</div>
+                <div class="col-lg-8 col-sm-12">
                     <ul>
-                        <li><a href="#"><!-- aca van los iconos de rr ss --></a></li>
-                        <li><a href="#"><!-- aca van los iconos de rr ss --></a></li>
-                        <li><a href="#"><!-- aca van los iconos de rr ss --></a></li>
-                        <li><a href="#"><!-- aca van los iconos de rr ss --></a></li>
+                        <li><a href="https://www.github.com/"><i class="fab fa-github-square"></i></a></li>
+                        <li><a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a href="https://www.twitter.com/"><i class="fab fa-twitter-square"></i></a></li>
+                        <li><a href="https://www.instagram.com/"><i class="fab fa-instagram-square"></i></a></li>
                     </ul>
                 </div>
             </div>
-        </div>
+            <div class="row" id="show-sm" >
+                <blockquote id="sign" class="show-sm outline-text bg-dark">
+                    <small class="small">
+                        Viajes Chile 2021. Todos los derechos reservados
+                    </small>
+                </blockquote>
+            </div>
+        </div>     
     </footer>
-    
+    <!-- fin de secciones -->
 
+                        <!-- enlaces script -->
+    <!-- typescript -->
+    <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+    
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+
     <!-- Js bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <!-- own js -->
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
