--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <header><!-- navbar y marca -->
             <nav id="navbarra" class="navbar navbar-expand-lg navbar-dark fixed-top">
                 <div class="container-fluid px-5">
-                    <a class="navbar-brand" href="#"><img src="assets/img/viajes.svg" alt="viajes-logo" width="30" height="24">Viajes Chile</a>
+                    <a class="navbar-brand" href="#carrusel"><img src="assets/img/viajes.svg" alt="viajes-logo" width="30" height="24">Viajes Chile</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                                <a class="nav-link" aria-current="page" href="#carrusel">Inicio</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#nosotros">Quienes Somos</a>
